# banchoo

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CPPLINT.cfg  LICENSE  readme.md
.github/workflows/: ci.yml
backend/: .clang-format  .clang-tidy  CMakeLists.txt  CPPLINT.cfg
backend/config/: api_test.json  release.json
backend/src/: main.cpp
backend/src/app/: app_factory.cpp  app_factory.hpp  crow_app.cpp  crow_app.hpp  crow_cors.hpp
backend/src/note/: note.hpp
backend/src/repository/: base_repository.cpp  inmemory_repository.cpp  inmemory_repository.hpp  repository_factory.cpp  repository_factory.hpp  sqlite_handler.cpp  sqlite_handler.hpp  sqlite_repository.cpp  sqlite_repository.hpp
backend/test/: test_inmemory_repository.cpp
docs/: ui_specification.md
frontend/: package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  api.ts
frontend/src/components/navigation/: NavigationBar.tsx
frontend/src/hooks/: useTransactionText.ts
frontend/src/lib/: api.ts
frontend/src/pages/Events/: EventFormPage.tsx  EventsPage.tsx
frontend/src/pages/Home/: HomePage.tsx  SummaryCard.tsx
frontend/src/pages/Memos/: MemoDetailPage.tsx  MemoFormPage.tsx  MemosPage.tsx  types.ts
frontend/src/pages/Tasks/: TaskFormPage.tsx  TasksPage.tsx
frontend/src/types/: note.ts
note_with_llm/: CMakeLists.txt
note_with_llm/config/: simple.json  test.json
note_with_llm/src/: main.cpp  note.h  note_handler.h  repository.h
note_with_llm/src/app/: app_factory.cpp  app_factory.hpp  app_interface.hpp  crow_app.cpp  crow_app.hpp
note_with_llm/src/note/: note.hpp  note_handler.hpp
note_with_llm/src/repository/: base_repository.hpp  inmemory_repository.cpp  inmemory_repository.h  inmemory_repository.hpp  repository_factory.cpp  repository_factory.hpp  repository_interface.cpp  repository_interface.h  repository_interface.hpp
note_with_llm/test/: test_inmemory_repository.cpp
script/: server_api_test.py
src/: main.cpp
src/app/: app_factory.cpp  app_interface.hpp  base_app.hpp  crow_app.cpp
src/common/: logger.hpp
src/note/: note.hpp
src/repository/: base_repository.cpp  base_repository.hpp  inmemory_repository.cpp  inmemory_repository.hpp  repository_factory.cpp
test/: main.cpp  test_inmemory_repository.cpp
